WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211111
[JSC] Throw OutOfMemoryError instead of RangeError if BigInt is too big
https://bugs.webkit.org/show_bug.cgi?id=211111
Summary
[JSC] Throw OutOfMemoryError instead of RangeError if BigInt is too big
Yusuke Suzuki
Reported
2020-04-27 18:42:05 PDT
...
Attachments
Patch
(9.80 KB, patch)
2020-04-27 19:05 PDT
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
Patch
(13.64 KB, patch)
2020-04-27 21:09 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-04-27 19:05:23 PDT
Created
attachment 397784
[details]
Patch
Yusuke Suzuki
Comment 2
2020-04-27 21:09:23 PDT
Created
attachment 397796
[details]
Patch
Yusuke Suzuki
Comment 3
2020-04-27 23:41:59 PDT
Committed
r260810
: <
https://trac.webkit.org/changeset/260810
>
Radar WebKit Bug Importer
Comment 4
2020-04-27 23:42:13 PDT
<
rdar://problem/62491177
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug