[JSC] Throw OutOfMemoryError instead of RangeError if BigInt is too big https://bugs.webkit.org/show_bug.cgi?id=211111

Reviewed by Saam Barati.

JSTests:

* stress/big-int-constructor-oom.js:
(catch):
* stress/big-int-left-shift-range-error.js:
(assertThrowRangeError):
* stress/big-int-out-of-memory-tests.js:
(catch):
* stress/bigint-exponential-oom.js: Added.
(shouldThrow):
* stress/bigint-int32-min-shift.js:
(shouldThrow):

Source/JavaScriptCore:

Currently, we are throwing a RangeError if we detect that JSBigInt becomes too large. But this is not consistent with our JSString's policy.
We should throw OutOfMemoryError in this case. This also makes DFG simple since DFG allows throwing OutOfMemoryError in any places which node
is even removed.

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupNode):
* runtime/ExceptionHelpers.cpp:
(JSC::throwOutOfMemoryError):
* runtime/ExceptionHelpers.h:
* runtime/JSBigInt.cpp:
(JSC::JSBigInt::tryCreateWithLength):
(JSC::JSBigInt::exponentiateHeap):
(JSC::JSBigInt::leftShiftByAbsolute):
(JSC::JSBigInt::allocateFor):

Canonical link: https://commits.webkit.org/224005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260810 268f45cc-cd09-0410-ab3c-d52691b4dbfc