JSTests/stress/big-int-constructor-oom.js
@@ -16,6 +16,6 @@ try {
     BigInt(sNumber);
     assert(false);
 } catch(e) {
-    assert(e.message == "Out of memory")
+    assert(e.message == "Out of memory: BigInt generated from this operation is too big")
 }
 
