JSTests/stress/big-int-out-of-memory-tests.js
@@ -12,41 +12,41 @@ try {
     let b = a + 1n;
     assert(false, "Should throw OutOfMemoryError, but executed without exception");
 } catch(e) {
-    assert(e.message == "Out of memory", "Expected OutOfMemoryError, but got: " + e);
+    assert(e.message == "Out of memory: BigInt generated from this operation is too big", "Expected OutOfMemoryError, but got: " + e);
 }
 
 try {
     let b = a - (-1n);
     assert(false, "Should throw OutOfMemoryError, but executed without exception");
 } catch(e) {
-    assert(e.message == "Out of memory", "Expected OutOfMemoryError, but got: " + e);
+    assert(e.message == "Out of memory: BigInt generated from this operation is too big", "Expected OutOfMemoryError, but got: " + e);
 }
 
 try {
     let b = a * (-1n);
     assert(false, "Should throw OutOfMemoryError, but executed without exception");
 } catch(e) {
-    assert(e.message == "Out of memory", "Expected OutOfMemoryError, but got: " + e);
+    assert(e.message == "Out of memory: BigInt generated from this operation is too big", "Expected OutOfMemoryError, but got: " + e);
 }
 
 try {
     let b = a / a;
     assert(false, "Should throw OutOfMemoryError, but executed without exception");
 } catch(e) {
-    assert(e.message == "Out of memory", "Expected OutOfMemoryError, but got: " + e);
+    assert(e.message == "Out of memory: BigInt generated from this operation is too big", "Expected OutOfMemoryError, but got: " + e);
 }
 
 try {
     let b = -a & -1n;
     assert(false, "Should throw OutOfMemoryError, but executed without exception");
 } catch(e) {
-    assert(e.message == "Out of memory", "Expected OutOfMemoryError, but got: " + e);
+    assert(e.message == "Out of memory: BigInt generated from this operation is too big", "Expected OutOfMemoryError, but got: " + e);
 }
 
 try {
     let b = a ^ -1n;
     assert(false, "Should throw OutOfMemoryError, but executed without exception");
 } catch(e) {
-    assert(e.message == "Out of memory", "Expected OutOfMemoryError, but got: " + e);
+    assert(e.message == "Out of memory: BigInt generated from this operation is too big", "Expected OutOfMemoryError, but got: " + e);
 }
 
